--- a/team-a-group.yaml
+++ b/team-a-group.yaml
@@ -7,8 +7,8 @@ spec:
   type: team
   profile:
     # Intentional no displayName for testing
-    email: team-a@example.com
-    picture: https://avatars.dicebear.com/api/identicon/team-a@example.com.svg?background=%23fff&margin=25
+    email: team-a@capgemini.com
+    picture: https://avatars.dicebear.com/api/identicon/team-a@capgemini.com.svg?background=%23fff&margin=25
   parent: backstage
   children: []
 ---
@@ -19,8 +19,8 @@ metadata:
 spec:
   profile:
     # Intentional no displayName for testing
-    email: breanna-davison@example.com
-    picture: https://avatars.dicebear.com/api/avataaars/breanna-davison@example.com.svg?background=%23fff
+    email: breanna-davison@capgemini.com
+    picture: https://avatars.dicebear.com/api/avataaars/breanna-davison@capgemini.com.svg?background=%23fff
   memberOf: [team-a]
 ---
 apiVersion: backstage.io/v1alpha1
@@ -30,8 +30,8 @@ metadata:
 spec:
   profile:
     displayName: Janelle Dawe
-    email: janelle-dawe@example.com
-    picture: https://avatars.dicebear.com/api/avataaars/janelle-dawe@example.com.svg?background=%23fff
+    email: janelle-dawe@capgemini.com
+    picture: https://avatars.dicebear.com/api/avataaars/janelle-dawe@capgemini.com.svg?background=%23fff
   memberOf: [team-a]
 ---
 apiVersion: backstage.io/v1alpha1
@@ -41,11 +41,11 @@ metadata:
 spec:
   profile:
     displayName: Nigel Manning
-    email: nigel-manning@example.com
-    picture: https://avatars.dicebear.com/api/avataaars/nigel-manning@example.com.svg?background=%23fff
+    email: nigel-manning@capgemini.com
+    picture: https://avatars.dicebear.com/api/avataaars/nigel-manning@capgemini.com.svg?background=%23fff
   memberOf: [team-a]
 ---
-# This user is added as an example, to make it more easy for the "Guest"
+# This user is added as an capgemini, to make it more easy for the "Guest"
 # sign-in option to demonstrate some entities being owned. In a regular org,
 # a guest user would probably not be registered like this.
 apiVersion: backstage.io/v1alpha1
@@ -55,6 +55,6 @@ metadata:
 spec:
   profile:
     displayName: Guest User
-    email: guest@example.com
-    picture: https://avatars.dicebear.com/api/avataaars/guest@example.com.svg?background=%23fff
+    email: guest@capgemini.com
+    picture: https://avatars.dicebear.com/api/avataaars/guest@capgemini.com.svg?background=%23fff
   memberOf: [team-a]
