--- a/backstage-group.yaml
+++ b/backstage-group.yaml
@@ -7,7 +7,7 @@ spec:
   type: sub-department
   profile:
     displayName: Backstage
-    email: backstage@example.com
-    picture: https://avatars.dicebear.com/api/identicon/backstage@example.com.svg?background=%23fff&margin=25
+    email: backstage@capgemini.com
+    picture: https://avatars.dicebear.com/api/identicon/backstage@capgemini.com.svg?background=%23fff&margin=25
   parent: infrastructure
   children: [team-a, team-b]
