--- a/boxoffice-group.yaml
+++ b/boxoffice-group.yaml
@@ -7,7 +7,7 @@ spec:
   type: sub-department
   profile:
     displayName: Box Office
-    email: boxoffice@example.com
+    email: boxoffice@capgemini.com
     # Intentional no picture for testing
   parent: infrastructure
   children: [team-c, team-d]
