--- a/boxoffice-group.yaml
+++ b/boxoffice-group.yaml
@@ -6,8 +6,8 @@ metadata:
 spec:
   type: sub-department
   profile:
-    displayName: Box Office
-    email: boxoffice@capgemini.com
+    displayName: Integration CCA
+    email: integrationcca@capgemini.com
     # Intentional no picture for testing
   parent: infrastructure
   children: [team-c, team-d]
