--- a/team-b-group.yaml
+++ b/team-b-group.yaml
@@ -7,8 +7,8 @@ spec:
   type: team
   profile:
     displayName: Team B
-    email: team-b@example.com
-    picture: https://avatars.dicebear.com/api/identicon/team-b@example.com.svg?background=%23fff&margin=25
+    email: team-b@capgemini.com
+    picture: https://avatars.dicebear.com/api/identicon/team-b@capgemini.com.svg?background=%23fff&margin=25
   parent: backstage
   children: []
 ---
@@ -19,8 +19,8 @@ metadata:
 spec:
   profile:
     displayName: Amelia Park
-    email: amelia-park@example.com
-    picture: https://avatars.dicebear.com/api/avataaars/amelia-park@example.com.svg?background=%23fff
+    email: amelia-park@capgemini.com
+    picture: https://avatars.dicebear.com/api/avataaars/amelia-park@capgemini.com.svg?background=%23fff
   memberOf: [team-b]
 ---
 apiVersion: backstage.io/v1alpha1
@@ -30,8 +30,8 @@ metadata:
 spec:
   profile:
     displayName: Colette Brock
-    email: colette-brock@example.com
-    picture: https://avatars.dicebear.com/api/avataaars/colette-brock@example.com.svg?background=%23fff
+    email: colette-brock@capgemini.com
+    picture: https://avatars.dicebear.com/api/avataaars/colette-brock@capgemini.com.svg?background=%23fff
   memberOf: [team-b]
 ---
 apiVersion: backstage.io/v1alpha1
@@ -41,8 +41,8 @@ metadata:
 spec:
   profile:
     displayName: Jenny Doe
-    email: jenny-doe@example.com
-    picture: https://avatars.dicebear.com/api/avataaars/jenny-doe@example.com.svg?background=%23fff
+    email: jenny-doe@capgemini.com
+    picture: https://avatars.dicebear.com/api/avataaars/jenny-doe@capgemini.com.svg?background=%23fff
   memberOf: [team-b]
 ---
 apiVersion: backstage.io/v1alpha1
@@ -52,8 +52,8 @@ metadata:
 spec:
   profile:
     displayName: Jonathon Page
-    email: jonathon-page@example.com
-    picture: https://avatars.dicebear.com/api/avataaars/jonathon-page@example.com.svg?background=%23fff
+    email: jonathon-page@capgemini.com
+    picture: https://avatars.dicebear.com/api/avataaars/jonathon-page@capgemini.com.svg?background=%23fff
   memberOf: [team-b]
 ---
 apiVersion: backstage.io/v1alpha1
@@ -63,6 +63,6 @@ metadata:
 spec:
   profile:
     displayName: Justine Barrow
-    email: justine-barrow@example.com
-    picture: https://avatars.dicebear.com/api/avataaars/justine-barrow@example.com.svg?background=%23fff
+    email: justine-barrow@capgemini.com
+    picture: https://avatars.dicebear.com/api/avataaars/justine-barrow@capgemini.com.svg?background=%23fff
   memberOf: [team-b]
