--- a/team-c-group.yaml
+++ b/team-c-group.yaml
@@ -7,8 +7,8 @@ spec:
   type: team
   profile:
     displayName: Team C
-    email: team-c@example.com
-    picture: https://avatars.dicebear.com/api/identicon/team-c@example.com.svg?background=%23fff&margin=25
+    email: team-c@capgemini.com
+    picture: https://avatars.dicebear.com/api/identicon/team-c@capgemini.com.svg?background=%23fff&margin=25
   parent: boxoffice
   children: []
 ---
@@ -19,8 +19,8 @@ metadata:
 spec:
   profile:
     displayName: Calum Leavy
-    email: calum-leavy@example.com
-    picture: https://avatars.dicebear.com/api/avataaars/calum-leavy@example.com.svg?background=%23fff
+    email: calum-leavy@capgemini.com
+    picture: https://avatars.dicebear.com/api/avataaars/calum-leavy@capgemini.com.svg?background=%23fff
   memberOf: [team-c]
 ---
 apiVersion: backstage.io/v1alpha1
@@ -30,8 +30,8 @@ metadata:
 spec:
   profile:
     displayName: Frank Tiernan
-    email: frank-tiernan@example.com
-    picture: https://avatars.dicebear.com/api/avataaars/frank-tiernan@example.com.svg?background=%23fff
+    email: frank-tiernan@capgemini.com
+    picture: https://avatars.dicebear.com/api/avataaars/frank-tiernan@capgemini.com.svg?background=%23fff
   memberOf: [team-c]
 ---
 apiVersion: backstage.io/v1alpha1
@@ -41,8 +41,8 @@ metadata:
 spec:
   profile:
     displayName: Peadar MacMahon
-    email: peadar-macmahon@example.com
-    picture: https://avatars.dicebear.com/api/avataaars/peadar-macmahon@example.com.svg?background=%23fff
+    email: peadar-macmahon@capgemini.com
+    picture: https://avatars.dicebear.com/api/avataaars/peadar-macmahon@capgemini.com.svg?background=%23fff
   memberOf: [team-c]
 ---
 apiVersion: backstage.io/v1alpha1
@@ -52,8 +52,8 @@ metadata:
 spec:
   profile:
     displayName: Sarah Gilroy
-    email: sarah-gilroy@example.com
-    picture: https://avatars.dicebear.com/api/avataaars/sarah-gilroy@example.com.svg?background=%23fff
+    email: sarah-gilroy@capgemini.com
+    picture: https://avatars.dicebear.com/api/avataaars/sarah-gilroy@capgemini.com.svg?background=%23fff
   memberOf: [team-c]
 ---
 apiVersion: backstage.io/v1alpha1
@@ -63,6 +63,6 @@ metadata:
 spec:
   profile:
     displayName: Tara MacGovern
-    email: tara-macgovern@example.com
-    picture: https://avatars.dicebear.com/api/avataaars/tara-macgovern@example.com.svg?background=%23fff
+    email: tara-macgovern@capgemini.com
+    picture: https://avatars.dicebear.com/api/avataaars/tara-macgovern@capgemini.com.svg?background=%23fff
   memberOf: [team-c]
